# fabio

./: .gitignore  CMakeLists.txt  README.md  build_all.sh  build_server.sh  doxygen.config
client/: .gitignore  CMakeLists.txt  client  game.cpp  get_imgui.sh  get_sdl_gfx.sh  imgui.ini  main.cpp  makefile  poker  poker.cpp  ui.cpp
client/imgui/: CMakeLists.txt  Makefile  imgui.ini
client/include/: game.hpp  glad.c  shader.fs  shader.vs  stb_image.h.gch  stencilSh.fs  stencilSh.vs  ui.hpp
client/include/classes/: camera_class.hpp  mesh_class.hpp  model_class.hpp  shader_class.hpp
client/include/glad/: glad.h
client/include/objects/: Bad_Chair.mtl  Bar_Stool.mtl  Diamonds.mtl  Table.mtl
net/client/: CMakeLists.txt  client.cpp
net/client/include/: client.hpp
net/common/include/: message.hpp  tsDeque.hpp
server/: CMakeLists.txt  config.cpp  database.cpp  example_config.toml  game.cpp  games.cpp  log.cpp  main.cpp  player.cpp  server.cpp
server/include/: .gitignore  config.hpp  database.hpp  game.hpp  games.hpp  log.hpp  player.hpp  server.hpp
server/test/: .gitignore  CMakeLists.txt  new_test_client.cpp  test_client.cpp
